tests/errors/sem.no-match.arr-type.or
main :: () -> void {
    T :: (a: [1]!u) {
        return;
    };

    T(10);
};
